<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg">

    <include
        android:id="@+id/layout_center_title"
        layout="@layout/layout_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp" />

    <include
        android:id="@+id/layout_bottom"
        layout="@layout/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:id="@+id/layout_personal_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bottom"
        android:layout_below="@id/layout_center_title"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用户名："
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iv_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:src="@drawable/ic_edit"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录密码："
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="*******"/>

            <ImageView
                android:id="@+id/iv_edit_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:src="@drawable/ic_edit"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机号："
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iv_edit_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:src="@drawable/ic_edit"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:background="@drawable/btn_orange_bg"
            android:paddingLeft="24dp"
            android:paddingTop="2dip"
            android:paddingRight="42dp"
            android:paddingBottom="2dip"
            android:text="@string/exit_login"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bottom"
        android:layout_below="@id/layout_center_title"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_frame_gray_bg_18dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="15dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/txt_company_info"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_88" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:text="联系我们"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_company_bottom_info"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_system_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bottom"
        android:layout_below="@id/layout_center_title"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="30dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_system_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="36dp"
            android:visibility="visible"/>
    </LinearLayout>

</RelativeLayout>