<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    android:gravity="center_horizontal">
    <include
        android:id="@+id/home_left"
        layout="@layout/home_layout_left_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_title_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_long"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_step_2"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_full_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white_88"
                    android:textColorHint="@color/white_88"
                    android:textSize="20sp" />

                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#E6EAEE" />

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@color/transparent"
                    android:hint="@string/hint_age"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:textColor="@color/white_88"
                    android:textColorHint="@color/white_88"
                    android:textSize="20sp" />
                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#E6EAEE" />
                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@color/transparent"
                    android:hint="@string/hint_weight"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:textColor="@color/white_88"
                    android:textColorHint="@color/white_88"
                    android:textSize="20sp" />

                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#E6EAEE" />
            </LinearLayout>
            <View
                android:layout_width="100dp"
                android:layout_height="0dp" />
            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="性        别："
                        android:textColor="@color/white_88"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:id="@+id/rg_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="34dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/checkbox_selector"
                            android:checked="true"
                            android:gravity="center_vertical"
                            android:paddingStart="24dp"
                            android:text="男"
                            android:textColor="@color/white_85"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:button="@drawable/checkbox_selector"
                            android:gravity="center_vertical"
                            android:paddingStart="24dp"
                            android:text="女"
                            android:textColor="@color/white_85"
                            android:textSize="24sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="个人所在地："
                        android:textColor="@color/white_88"
                        android:textSize="24sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_gray_bg">

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:text="请选择（选填）"
                            android:textColor="@color/white_88"
                            android:textSize="20sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="19dp"
                            android:src="@drawable/ic_down" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="     手术时间："
                        android:textColor="@color/white_88"
                        android:textSize="24sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_gray_bg">

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:text="请选择（必填）"
                            android:textColor="@color/white_88"
                            android:textSize="20sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="19dp"
                            android:src="@drawable/ic_down" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="     手术名称："
                        android:textColor="@color/white_88"
                        android:textSize="24sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_gray_bg">
                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/sp_select_diagnostic_result"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:entries="@array/diagnostic_result_list"
                            android:gravity="center"
                            android:spinnerMode="dropdown"
                            android:theme="@style/Spinner2"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="19dp"
                            android:src="@drawable/ic_down" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_orange_bg"
            android:paddingLeft="50dp"
            android:paddingTop="2dp"
            android:paddingRight="50dp"
            android:paddingBottom="2dp"
            android:layout_gravity="center"
            android:text="@string/confirm_short"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>